objects/Account.object
<CustomObject>
    <fields>
        <fullName>GT_Account_Type__c</fullName>
        <label>GT Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOLDTO</fullName>
                </value>
                <value>
                    <fullName>CONTROL</fullName>
                </value>
                <value>
                    <fullName>SHIPTO</fullName>
                </value>
                <value>
                    <fullName>ENTITY</fullName>
                </value>
                <value>
                    <fullName>MASTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GT_Description__c</fullName>
        <description>Created for Story #S-357921</description>
        <label>GT Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_Max_Perks_Eligible__c</fullName>
        <description>Per Canada change label name</description>
        <label>Grand Rewards Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GT_Max_Perks_Enrolled_Date__c</fullName>
        <description>Per Canada change label name</description>
        <label>Grand Rewards Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GT_Max_Perks_Enrolled__c</fullName>
        <description>Per Canada change label name</description>
        <label>Grand Rewards Enrolled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GT_Segment__c</fullName>
        <label>GT Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Micro &lt;$2,500</fullName>
                </value>
                <value>
                    <fullName>Micro $2,500-$5,000</fullName>
                </value>
                <value>
                    <fullName>Micro $5,000-$10,000</fullName>
                </value>
                <value>
                    <fullName>SMB $10,000-$30,000</fullName>
                </value>
                <value>
                    <fullName>SMB $30,000-$75,000</fullName>
                </value>
                <value>
                    <fullName>SMB $75,000-$150,000</fullName>
                </value>
                <value>
                    <fullName>SMB $150,000-$250,000</fullName>
                </value>
                <value>
                    <fullName>Large $250,000-$1M</fullName>
                </value>
                <value>
                    <fullName>Enterprise $1M-$2.5M</fullName>
                </value>
                <value>
                    <fullName>Enterprise $2.5M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grand_Parent_Hosted_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grand Parent Hosted Catalog - Edit Access should be restricted to users who can view standard cores. 
Support team (Dan and direct reports; Alex Most, Vicki Dumont, etc) also requires view access</description>
        <label>Is this a GP Acct with Hosted Catalog?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grand_Siloe__c</fullName>
        <label>Grand Silo</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_ID__c</fullName>
        <formula>If(OR((RecordType.Name ==&apos;Site&apos;),(RecordType.Name ==&apos;Site (OfficeMax)&apos;)),
Related_Account__r.Parent.Parent.AOPS_Cust_Id__c,
(IF((RecordType.Name == &apos;Site (GT)&apos;),Related_Account__r.Parent.Parent.OMX_Primary_Key__c, 
IF((RecordType.Name == &apos;Customer (GT)&apos;),Parent.Parent.OMX_Primary_Key__c ,Parent.Parent.AOPS_Cust_Id__c)) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Name__c</fullName>
        <formula>If(OR((RecordType.Name ==&apos;Site&apos;),(RecordType.Name ==&apos;Site (OfficeMax)&apos;),(RecordType.Name ==&apos;Site (GT)&apos;)),
Related_Account__r.Parent.Parent.Name,
Parent.Parent.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Name_site__c</fullName>
        <description>Related_Account__r.Parent.Parent.Name</description>
        <formula>Related_Account__r.Parent.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Name Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent__c</fullName>
        <formula>IF($RecordType.Name = &quot;GrandParent&quot;, &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Record_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header Record Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Model__c</fullName>
        <label>Help Desk Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosted_Catalog_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hosted Catalog Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IOWNACCOUNT__c</fullName>
        <formula>IF (OwnerId = $User.Id || 
Sales_PersonID__r.User__r.ManagerId = $User.Id || 
Sales_PersonID__r.User__r.Manager.ManagerId = $User.Id  || 
Sales_PersonID__r.User__r.Manager.Manager.ManagerId = $User.Id ||
Sales_PersonID__r.User__r.Manager.Manager.Manager.ManagerId = $User.Id ||
Sales_PersonID__r.User__r.Manager.Manager.Manager.Manager.ManagerId = $User.Id
,&quot;yes&quot;,&quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOWNACCOUNT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Support_Details__c</fullName>
        <label>IT Support Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for the Account Maintenance case owner ship calculation</description>
        <label>Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_OD_SIC_DB__c</fullName>
        <description>DataWareHouse Provided Attribute,  
Populated as Part of enrichment (Integration) b/w SFDC and Data Warehouse</description>
        <label>Industry (OD SIC) - D&amp;B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_OD_SIC_Rep_Code__c</fullName>
        <formula>CASE(  Industry_OD_SIC_Rep__c,
&quot;Accounting&quot;,&quot;AC&quot;,
&quot;Business Services&quot;,&quot;BS&quot;,
&quot;Construction/Contractors&quot;,&quot;CO&quot;,
&quot;Engineering/Architecture/Consulting&quot;,&quot;EA&quot;,
&quot;Education/Schools&quot;,&quot;ES&quot;,
&quot;Finance&quot;,&quot;FN&quot;,
&quot;Government&quot;,&quot;GV&quot;,
&quot;Insurance&quot;,&quot;IN&quot;,
&quot;Legal&quot;,&quot;LG&quot;,
&quot;Medical/Health Services&quot;,&quot;MH&quot;,
&quot;Manufacturing/Printing&quot;,&quot;MN&quot;,
&quot;Membership/Organizations&quot;,&quot;OR&quot;,
&quot;Other&quot;,&quot;OT&quot;,
&quot;Real Estate&quot;,&quot;RE&quot;,
&quot;Retail/Restaurants&quot;,&quot;RT&quot;,
&quot;Social Services&quot;,&quot;SS&quot;,
&quot;Transportation/Communications/Utilities&quot;,&quot;UT&quot;,
&quot;Wholesale Trade&quot;,&quot;WT&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry (OD) SIC Rep Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_OD_SIC_Rep__c</fullName>
        <description>Industry - REP Provided</description>
        <label>Industry - Rep</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Construction/Contractors</fullName>
                </value>
                <value>
                    <fullName>Education/Schools</fullName>
                </value>
                <value>
                    <fullName>Engineering/Architecture/Consulting</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Printing</fullName>
                </value>
                <value>
                    <fullName>Medical/Health Services</fullName>
                </value>
                <value>
                    <fullName>Membership/Organizations</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail/Restaurants</fullName>
                </value>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>Transportation/Communications/Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chamber Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Opportunity_Annual_Amount__c</fullName>
        <description>Populate with opportunity amount used in the initial account setup</description>
        <inlineHelpText>Opportunity amount used in the initial account setup</inlineHelpText>
        <label>Initial Opportunity Annual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Site_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is a system flag used by trigger on initial prospect creation.  Prevents trigger from firing twice.</description>
        <label>Initial Site Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Calc_Pot__c</fullName>
        <formula>Ink_Toner_Pot__c  -  Ink_Toner_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ink Toner Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Diff__c</fullName>
        <formula>Ink_Toner_TY__c  -  Ink_Toner_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ink Toner Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_LY__c</fullName>
        <label>Ink Toner IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_LY_per__c</fullName>
        <formula>If((Ink_Toner_LY__c = 0 ||  Ink_Toner_LY__c = null), 0, (Ink_Toner_IMU_LY__c /  Ink_Toner_LY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ink Toner IMU LY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_TY__c</fullName>
        <label>Ink Toner IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_TY_per__c</fullName>
        <formula>If((Ink_Toner_TY__c = 0 || Ink_Toner_TY__c = null), 0, (Ink_Toner_IMU_TY__c / Ink_Toner_TY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ink Toner IMU TY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_LY__c</fullName>
        <description>Ink Toner - YTD Sales Last Year</description>
        <inlineHelpText>Ink Toner - YTD Sales Last Year</inlineHelpText>
        <label>Ink Toner LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Last_Order__c</fullName>
        <label>Ink Toner Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Last_Order_amt__c</fullName>
        <label>Ink Toner Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Pot__c</fullName>
        <description>Ink Toner - Potential</description>
        <inlineHelpText>Ink Toner - Potential</inlineHelpText>
        <label>Ink Toner Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_TY__c</fullName>
        <description>Ink Toner Sales this Year</description>
        <inlineHelpText>Ink Toner Sales this Year</inlineHelpText>
        <label>Ink Toner TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Total_LY__c</fullName>
        <label>Ink Toner Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsProspectLightning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProspectLightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EDI_Order_Placement_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is EDI Order Placement Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sales_Rep_Owner__c</fullName>
        <formula>if( OwnerId ==Sales_PersonID__r.User__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sales Rep Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__AccountExtension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension (DEPRECATED)</label>
        <referenceTo>LBI__AccountExtension__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__NumberOfOpenInProgressRecommendations__c</fullName>
        <label>Number Of Recommendations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCATION_REQ_CODE_7__c</fullName>
        <label>LOCATION_REQ_CODE_7</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCATION_REQ_CODE_9__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <label>LOCATION_REQ_CODE_9</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Calc_Pot__c</fullName>
        <formula>Labels_Forms_Pot__c  -  Labels_Forms_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labels &amp; Forms Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Diff__c</fullName>
        <formula>Labels_Forms_TY__c  -  Labels_Forms_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labels &amp; Forms Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_LY__c</fullName>
        <label>Labels &amp; Forms IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_LY_per__c</fullName>
        <formula>If((Labels_Forms_LY__c = 0 || Labels_Forms_LY__c = null), 0, (Labels_Forms_IMU_LY__c / Labels_Forms_LY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labels &amp; Forms IMU LY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_TY__c</fullName>
        <label>Labels &amp; Forms IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_TY_per__c</fullName>
        <formula>If((Labels_Forms_TY__c = 0 || Labels_Forms_TY__c = null), 0, (Labels_Forms_IMU_TY__c /Labels_Forms_TY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labels &amp; Forms IMU TY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_LY__c</fullName>
        <description>Labels Sales Last Year</description>
        <inlineHelpText>Labels Sales Last Year</inlineHelpText>
        <label>Labels &amp; Forms LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Last_Order__c</fullName>
        <label>Labels &amp; Forms Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Last_Order_amt__c</fullName>
        <label>Labels &amp; Forms Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Pot__c</fullName>
        <description>Labels Potential</description>
        <inlineHelpText>Labels Potential</inlineHelpText>
        <label>Labels &amp; Forms Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_TY__c</fullName>
        <description>Labels Sales this Year</description>
        <label>Labels &amp; Forms TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Total_LY__c</fullName>
        <label>Labels &amp; Forms Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lattice_Opportunity_Amount__c</fullName>
        <label>Lattice ACQ Opportunity Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.LeadSource</field>
            <operation>equals</operation>
            <value>salesPRISM ACQ</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business Pro</description>
        <label>Store Top Customer List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedBy__c</fullName>
        <label>Legacy CreatedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedBy__c</fullName>
        <label>Legacy LastModifiedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Flag__c</fullName>
        <label>Legal Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Opp_Amount__c</fullName>
        <description>Summarize for lost opportunities of an account;  LOST at this filed means the lifecycle is At-Risk and product equals to All Supplies.  Other losses for prospects or specific product categories won&apos;t be considered as a loss.</description>
        <label>Lost Opp Amount</label>
        <summarizedField>Opportunity.Win_Loss_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Win_Loss_Renewal__c</field>
            <operation>equals</operation>
            <value>Loss</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>equals</operation>
            <value>All Supplies</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loyalty_Type__c</fullName>
        <description>Loyality Program</description>
        <label>Loyalty Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sales TAM</fullName>
                </value>
                <value>
                    <fullName>OD Rewards Platinum</fullName>
                </value>
                <value>
                    <fullName>Regular - No Loyalty Flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyatly_Number__c</fullName>
        <description>Business Pro - Stores loyalty data</description>
        <externalId>true</externalId>
        <label>Loyalty Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MPS_Calc_Pot__c</fullName>
        <formula>MPS_Pot__c  -  MPS_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPS Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Diff__c</fullName>
        <formula>MPS_TY__c - MPS_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPS Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_LY__c</fullName>
        <label>MPS IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_LY_per__c</fullName>
        <formula>If((MPS_LY__c = 0 || MPS_LY__c = null), 0, (MPS_IMU_LY__c /  MPS_LY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPS IMU LY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_TY__c</fullName>
        <label>MPS IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_TY_per__c</fullName>
        <formula>If((MPS_TY__c = 0 || MPS_TY__c = null), 0, (MPS_IMU_TY__c / MPS_TY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPS IMU TY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MPS_LY__c</fullName>
        <description>MPS YTD Sales LY.</description>
        <inlineHelpText>MPS YTD Sales LY.</inlineHelpText>
        <label>MPS LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Last_Order__c</fullName>
        <label>MPS Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPS_Last_order_amt__c</fullName>
        <label>MPS Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related MPS Parent</description>
        <label>Related OD Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>(Tech-Zone)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Related OD Account)</relationshipLabel>
        <relationshipName>MPS_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPS_Pot__c</fullName>
        <label>MPS Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_TY__c</fullName>
        <label>MPS TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Total_LY__c</fullName>
        <label>MPS Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_Diff__c</fullName>
        <formula>(MTD_Sales_TY__c  -  MTD_Sales_LY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Sales Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY_IMU2__c</fullName>
        <formula>If((MTD_Sales_LY__c = 0 || MTD_Sales_LY__c = null), 0, (MTD_Sales_LY_IMU__c  /  MTD_Sales_LY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Sales LY IMU%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY_IMU__c</fullName>
        <label>MTD Sales LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY__c</fullName>
        <description>Current Month Sales for Last Year</description>
        <inlineHelpText>Current Month Sales for Last Year</inlineHelpText>
        <label>MTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY_IMU2__c</fullName>
        <formula>If((MTD_Sales_TY__c = 0 || MTD_Sales_TY__c = null), 0, (MTD_Sales_TY_IMU__c  /  MTD_Sales_TY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Sales TY IMU%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY_IMU__c</fullName>
        <label>MTD Sales TY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY__c</fullName>
        <description>Current Month Sales for this year</description>
        <inlineHelpText>Current Month Sales for this year</inlineHelpText>
        <label>MTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Date__c</fullName>
        <label>Mail Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_In__c</fullName>
        <inlineHelpText>Submit an Account Maintenance Request to update Opt In values</inlineHelpText>
        <label>Mail Opt In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To__c</fullName>
        <label>Mail To</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Sync_Flag__c</fullName>
        <description>Required for Marketo Sync</description>
        <formula>if (RecordTypeId = &quot;012E000000093Jo&quot; , true, if(RecordTypeId = &apos;012E000000093Jq&apos;, true,if(RecordTypeId  =&apos;012E000000093Jp&apos;, true,if(RecordTypeId  =&apos;012E000000093Jn&apos;, true,false))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Sync Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Partner Onboarding</description>
        <label>Master Agent Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>(Tech-Zone)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Master Agent Name)</relationshipLabel>
        <relationshipName>parentAgent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Order_Limit__c</fullName>
        <label>Max Order Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medallia_Include_in_surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medallia_Include_in_surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Order_Charge__c</fullName>
        <label>Pays minimum handling charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MindMatrix__Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindMatrix__Area_Served__c</fullName>
        <label>Area Served</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MindMatrix__Asset_Used__c</fullName>
        <label>Asset Used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindMatrix__Campaign_Sent__c</fullName>
        <label>Campaign Sent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindMatrix__Certification_Status__c</fullName>
        <label>Certification Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>